--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
+<html lang="pt-BR">
 <head>
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <header>aluraflix</header>
-    <h1>Bob Esponja | SpongeBob mandando MUITO bem na cozinha 🔥</h1>
-    <p></p>
+   
+     <header>aluraflix</header>
+
+       <section>
+        <div>
+            <h1>Bob Esponja | SpongeBob mandando MUITO bem na cozinha 🔥</h1>
+    <p>#desenho</p>
+    <div>
+
+        <div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/KFhlYA2WSSo?si=XCBG4P_Uh6m_RJr7"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+        </section>
 </body>
+</html>
