--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
         </div>
 
         </section>
-</body>
-</html>
+<sectinon class="categoria">  
+<h2>filmes e series</h2>
+  <div class="categoria-videos">
+   <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc"> 
+    <img src="https:/img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg"/>
